# svea_lli_zephyr

./: .gitignore  .gitmodules  README  README.md  entrypoint  ping_echo.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-and-release.yml
.west/: config
Projects/imu-test/: CMakeLists.txt  prj.conf
Projects/imu-test/boards/: clicker4_stm32f7.overlay
Projects/imu-test/src/: main.c
Projects/pwm-reader/: CMakeLists.txt  prj.conf
Projects/pwm-reader/boards/: clicker4_stm32.overlay
Projects/pwm-reader/src/: main.c
Projects/simple-microros/: CMakeLists.txt  prj.conf
Projects/simple-microros/boards/: clicker4_stm32.overlay  esp32c3_supermini.overlay  nucleo_f446re.overlay
Projects/simple-microros/src/: main.c
Projects/simple-microros/src/threads/control/common/: common.c  common.h
Projects/simple-microros/src/threads/control/pwm/: leds.c  pwm.h  pwm_actuator.c  pwm_publisher.c  pwm_relay.c  servo_subscriber.c
Projects/simple-microros/src/threads/control/pwm_actuator/: pwm_actuator.c  pwm_actuator.h
Projects/simple-microros/src/threads/control/pwm_in/: pwm_publisher.c  pwm_publisher.h
Projects/simple-microros/src/threads/control/steering-remote/: pwm_publisher.c  pwm_publisher.h
Projects/simple-microros/src/threads/control/steering-servo/: servo_subscriber.c  servo_subscriber.h
Projects/simple-microros/src/threads/diag/: diag_publisher.h
Projects/simple-microros/src/threads/diff-servo/: servo_sweeper.hIGNORE
Projects/simple-microros/src/threads/imu/: imu_publisher.c  imu_publisher.h
Projects/simple-microros/src/threads/sensor/imu/: imu_publisher.c  imu_publisher.h
Projects/simple-microros/src/threads/servo/: servo_sweeper.c
Projects/simple-microros/src/threads/steering-remote/: pwm_publisher.c  pwm_publisher.h
Projects/simple-microros/src/threads/steering-servo/: servo_subscriber.c
Projects/simple-microros/src/threads/util/diag/: diag_publisher.c  diag_publisher.h
Projects/svea-lli/: CMakeLists.txt  README.md  digital.csv  prj.conf
Projects/svea-lli/boards/: clicker4_stm32.overlay  clicker4_stm32f7.overlay
Projects/svea-lli/dts/bindings/: bms.yaml  ti,bq769x0.yaml
Projects/svea-lli/dts/bindings/input/: wheel-encoder.yaml
Projects/svea-lli/include/: control.h  imu_sensor.h  ina3221_sensor.h  loop_delays.h  rc_input.h  remote.h  ros_iface.h  sensors.h  servo.h  wheel_enc.h
Projects/svea-lli/src/: bms.cpp  control.c  imu_reset.c  imu_sensor.c  ina3221_sensor.c  main.c  rc_input.c  read.txt  remote.c  ros_iface.c  sensor_imu.c  sensors.c  servo.c  wheel_enc.c
Projects/teensy40_zenoh_pub/: CMakeLists.txt  README.md  prj.conf
Projects/teensy40_zenoh_pub/boards/: clicker4_stm32f7.overlay  teensy40.overlay  xiao_esp32c3.overlay
Projects/teensy40_zenoh_pub/include/: zenoh_generic_config.h
Projects/teensy40_zenoh_pub/src/: main.c
Projects/threads/boards/: clicker4_stm32.overlay
Projects/traffic_light/: CMakeLists.txt  prj.conf  prj.secrets.conf
Projects/traffic_light/boards/: esp32c3_supermini.overlay
Projects/traffic_light/src/: main.c
boards/arm/clicker4_stm32/: Kconfig.board  Kconfig.clicker4_stm32  board.cmake  board.yml  clicker4_stm32.dts  clicker4_stm32_defconfig
boards/arm/clicker4_stm32/doc/: mikroe_clicker_2.rst
boards/arm/clicker4_stm32f7/: Kconfig.board  Kconfig.clicker4_stm32f7  board.cmake  board.yml  clicker4_stm32f7.dts  clicker4_stm32f7_defconfig
boards/arm/clicker4_stm32f7/support/: openocd.cfg
drivers/: CMakeLists.txt  Kconfig
drivers/dts/bindings/: st,ism330dlc-common.yaml  st,ism330dlc-i2c.yaml  st,ism330dlc-spi.yaml
drivers/st_ism330dlc/: CMakeLists.txt  Kconfig  ism330dlc.c  ism330dlc.h  ism330dlc_i2c.c  ism330dlc_shub.c  ism330dlc_spi.c  ism330dlc_trigger.c
drivers/zephyr/: module.yml
firmware/: .gitignore  howtotest.md
firmware/Projects/simple-microros/: prj.conf
firmware/Projects/simple-microros/boards/: esp32c3_supermini.overlay  xiao_esp32c3.overlay
firmware/Projects/simple-microros/src/: main.c
firmware/west-manifest/: west.yml
modules/lib/micro_ros_zephyr_module/: README.md  package.xml
modules/lib/micro_ros_zephyr_module/.github/workflows/: ci.yml  nightly.yml
modules/lib/micro_ros_zephyr_module/modules/libmicroros/: CMakeLists.txt  libmicroros.mk
modules/lib/micro_ros_zephyr_module/modules/libmicroros/microros_transports/serial/: microros_transports.c  microros_transports.h
modules/lib/micro_ros_zephyr_module/modules/libmicroros/microros_transports/serial-usb/: microros_transports.c
modules/lib/svea-bms/: .gitignore  README.md
modules/lib/svea-bms/app/: Kconfig
modules/lib/svea-bms/app/src/: CMakeLists.txt  bms.h  bms_common.c  data_objects.cpp  main.cpp  wake_chip.c  wake_chip.h
modules/lib/svea-bms/app/src/bq769x0/: bms_bq769x0.c  interface.c  interface.h
modules/lib/svea-bms/west-manifest/: west.yml
ros-host/.devcontainer/: Dockerfile  devcontainer.json
west-manifest/: west.yml
